Update images to production renders

--- a/_posts/2022-03-29-money-pit.md
+++ b/_posts/2022-03-29-money-pit.md
@@ -8,9 +8,9 @@ summary: It's a house!
 
 No, I am not going to build a swimming pool in South Lake Tahoe. 
 
-In fairness, the hole in the ground did look suspiciously swimming-pool-esque. This hole in the ground was for my basement. A hard won basement that required consultants and backhoes long before any building plans existed. A basement that I'm very excited about! It'll allow the house to sit slightly proud of the grade, rising above the snow in the winter and presenting a non-ignitable material to burning embers and grass. And the extra space will afford a root cellar, music room, and mechanical equipment inside the conditioned envelope — all while staying within TRPA’s coverage and height limits.
+In fairness, the hole in the ground did look suspiciously swimming pool esque. This hole in the ground was for my basement. A hard won basement that required consultants and backhoes long before any building plans existed. A basement that I'm very excited about! It'll allow the house to sit slightly proud of the grade, rising above the snow in the winter, protecting the crawlspace from hibernating bears, and presenting a non-ignitable material to burning embers and grass in the summer. And the extra space will afford a root cellar, music room, and mechanical equipment inside the conditioned envelope — all while staying within TRPA’s coverage and height limits.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/16A0898F-A817-4A61-82EC-E806433FB9D8_2/QU3SDZ1Y28mGoUJHxmcZZk1TxUfUn3YrYhJtsfC57skz/IMG_0193.jpeg)
+![Picture of my swimming hole basement](https://assets.warpspire.com/images/money-pit/Swimming Hole.jpg)
 
 All of that is to say — I’m building a house! Which is kind of a weird turn of phrase — I won't be *building* it. The good folks at [Sierra Sustainable](https://www.sierrasustainable.com/) are handling that. 
 
@@ -18,9 +18,9 @@ But over the past two and a half years, I've been absorbed in designing this hou
 
 After a couple years of building department bureaucracy, a megafire burning through town, a historic atmospheric river, a month of record snowfall, and the driest winter on record… it’s starting to become a very real house. My very own money pit!
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/271AD9D6-8D37-4CFB-BC38-E70687850636_2/vtSjc2Fi9BfpqRz91RvyEIr06d7xuvtsqrLkGaKnywsz/IMG_7382.jpeg)
+![The basement, half framed](https://assets.warpspire.com/images/money-pit/Construction 1.jpg)
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/3D9B237F-D7EE-4456-985A-BCC3C4117CE3_2/Hf49vbYtyB1U5dEEvM7zInaE9YNpuCkqWydLBx8lhlIz/IMG_7443.jpeg)
+![First floor going up](https://assets.warpspire.com/images/money-pit/Construction 2.jpg)
 
 ----
 
@@ -33,9 +33,9 @@ After a couple years of building department bureaucracy, a megafire burning thro
 
 If you spend any time in Tahoe, you’re familiar with *that house.* It's the same house with slightly different siding. It pays no attention to the angle of the sun, local weather, the shape of the lot, or the positions of the trees. It is too large and expensive for almost all local working class residents. It is Tyvek-wrapped, forced-air, asphalt-shingle relic of outdated building science, unprepared for the present — let alone the future. Spec builders love it — they pour the same foundation, frame the same walls, install the same plumbing and mechanicals. It's known. Building departments love it — what's better than a plan that’s identical to the previous 90 incarnations? You can practically take a nap during plan check.
 
-I hate this house.
+I hate that house.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/53B88645-BC11-471C-AB4F-A3ED9D1E9515_2/yDFnk44eFvyDg6B8TiovV51DFmgIzccyQWXMp52tkY0z/House%20Collage.jpeg)
+![Several pictures of that house around my neighborhood](https://assets.warpspire.com/images/money-pit/House Collage.jpg)
 
 But I have to admit it is not an evil house. It is how the vast majority of houses in America are built today. Developers buy large swaths of land, buy a couple of off-the-shelf building plans, and build the exact same house over and over, occasionally letting clients choose siding and interior finishes. It is the bleeding edge of the financialization of shelter.
 
@@ -50,11 +50,11 @@ More so than a beautiful artifact of architecture, I wanted a well built home de
 
 One day while wandering around a new neighborhood, I spotted a house that wasn't *that house*. This house was [Lighthaus](https://www.sierrasustainable.com/oakland) — a single family residence designed by [Peripherie Design](http://peripherie.design/gallery/) and built by [Sierra Sustainable Builders](https://www.sierrasustainable.com/). It was the first time I'd seen builders inside the basin building something different.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/DE0D2AA4-ADED-488E-8109-36C1EFB0E817_2/hznycIor4QlORIpPHiTsYmUTna2dMU3l3harMB7FeNAz/IMG_4199.jpeg)
+![One of the rooms in Lighthaus](https://assets.warpspire.com/images/money-pit/Lighthaus.jpg)
 
 Later, when touring the house during their completion party, I could see this house was built by people who care. My assumptions were validated by the designer/owner who said something like _I wouldn't even consider working with a different build team in the future._ After meeting Cory & Brandon and learning about their passion for well-built homes and their love for South Lake Tahoe, I knew they were the team I wanted to work with.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/15E011CA-25AC-4307-BE08-F96F499C17F3_2/kMf1BZC4Bz3r1jTZKFhGlc7ybXQdMNA7riOE5hLOCIcz/IMG_0572.jpeg)
+![The empty lot](https://assets.warpspire.com/images/money-pit/Lot.jpg)
 
 After acquiring an empty lot and settling on the build team — my next move was to start the bureaucratic struggle with the building department toward a building permit. I know, this probably feels a bit backwards if you're used to building in Idaho. But this is California — and inside of the Lake Tahoe watershed at that. At the time I closed on the lot (summer of 2019), it was looking like I wouldn’t be able to get a building allocation (roughly, permission to submit building plans) until 2022 due to a forthcoming two year audit. So it was important to start this process early.
 
@@ -64,7 +64,7 @@ In the meantime, I wanted to better understand the limitations and possibilities
 
 So I picked up SketchUp, watched a few tutorials, and started sketching out some ideas to explore what was possible.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/4A250074-AC71-4ED3-8C93-7807818AEB56_2/P2H8xvZdKYC0fuyC3CQ6NsZt0wCEkBZaHSBo265UUvgz/dcf91fa0-87ea-4ca4-8937-b166cb95f019.jpeg)
+![Several of my early attempts](https://assets.warpspire.com/images/money-pit/SketchUp Masses.jpg)
 
 As I got deeper into this process, I realized that I was *really enjoying it.* Modeling in SketchUp allowed me to rapidly see the tradeoffs of positioning the driveway in different areas, see how the sun would move through different rooms throughout the days and seasons, how much room I'd have for furniture, what the shape of the yard would look like, how much roof area would be available for solar panels — and all in a model with real measurements that fit within the actual restrictions for our lot.
 
@@ -77,19 +77,19 @@ So, that's why I didn't hire an architect. **I just really enjoyed designing thi
 
 I’m a big fan of iteration when setting out to create something new. In a perfect universe, I’d build a house, live in it for a while, and re-build it every year for a decade or so. Every iteration of the house would improve upon its predecessor until all the kinks were ironed out, the light hit the walls *just so*, and every space was perfected for its use. But that's a fantasy left for science-fiction. In the real world, building a house is a one-shot deal, and that means lots of planning. Every wall, every window, every doorway needs to be carefully designed and engineered long before construction starts. That's doubly true in today's world of long lead times (the _supply chain_ and all that). Traditionally, architects have used sketches and drawings to communicate their ideas to their clients during this phase.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/09166A11-FD89-4730-A450-F04F43D645FD_2/9FgyCkC9OVMan6OxwmE177lEJMAhw5eut9aO5kCD0bgz/6540d5dc42c22dc353f173b855c749a6.jpeg)
+![A sketch of Kriesel's Twin Palms](https://assets.warpspire.com/images/money-pit/Twin Palms.jpg)
 
 These drawings kind of suck. They’re pretty artifacts to look at, but they don’t do a good job of describing how a house will live to someone who isn’t deeply experienced in building structures from drawings. This is why architects also learn how to create physical models made of styrofoam and toothpicks to communicate their ideas.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/C03B6545-361E-4743-A5F1-6CF65792B085_2/sCvH5HgujFvGUUbYWM6uyaf08MutI846UMGifS2VNckz/IMG_6382.jpeg)
+![A physical architectual model](https://assets.warpspire.com/images/money-pit/Floodline Model.jpg)
 
 Unfortunately, we're not building a school for ants, and these models don't communicate interior spaces well at all. More importantly, drawings and models aren't really iterative. They take a long time to produce, and can't be easily modified. But this is where computers excel! Iterations are cheap, and easy modification is the rule. This is what drew me to 3D modeling — specifically [SketchUp](https://www.sketchup.com). At first, I was intimidated — I had never really done any 3D modeling. But I have to say, the world of 3D modeling has become extremely accessible in the past decade or so. It only took me a week or so to master the basics and start getting value out of my models.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/177762DC-AC55-4BA1-ABDA-FAFE10324C1C_2/waknZuiff3eNt2k6cMtvd5rVyNiK9wIqmA6hyGghDw4z/CleanShot%202022-03-29%20at%2012.28.142x.png)
+![SketchUp Model 1](https://assets.warpspire.com/images/money-pit/Model 1.jpg)
 
 Most importantly, the process was very iterative — I could copy and paste elements from different ideas together, rotate them around, poke windows wherever I pleased, and gain a lot of understanding for how the house would feel with minimal effort.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/5D23C8E0-B9E3-42AE-B605-365F2F68AC1D_2/byNtZdgIwKV2Jep2I1igwU8gT1umaoPAdlzDu1AU9Tgz/CleanShot%202022-03-29%20at%2012.28.272x.png)
+![SketchUp Model 2](https://assets.warpspire.com/images/money-pit/Model 2.jpg)
 
 I love this type of accurately-modeled iteration because it allows you to play with ideas and see tradeoffs in a holistic sense. It's like using real user data for your digital prototypes instead of nicely formatted cherry-picked sample data. What is the tradeoff of solar production, passive gain, and garden size given different building masses? How much smaller would my kitchen need to be if I were to position the driveway differently?
 
@@ -97,11 +97,11 @@ This is the core of why I love to use iteration on problems with several interco
 
 Curious if a solution will work? Try it out.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/8961578E-0215-469B-A62A-9CDA17B13CFA_2/wMRXf7CsWQb4QlznBb6lEs1c36gBT8SWk7QHsB5woycz/CleanShot%202022-03-29%20at%2012.31.382x.png)
+![SketchUp Model 3](https://assets.warpspire.com/images/money-pit/Model 3.jpg)
 
 You don’t even have to be very experienced in SketchUp to get a lot of value out of it. Just having a realistic geo-located sun model is an *incredible* tool for building houses. Ever wonder how light will move through your open concept living room during the summer solstice? Easy!
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/06F4CAFD-0A16-4FB4-B57A-21CC95ABA28E_2/jkmKza9e8FkXcPxMU2f2xFvixqpFf0NBIeWKwelmcGoz/AnimatedImage.gif)
+![Kitchen Shadows](https://assets.warpspire.com/images/money-pit/Kitchen Shadows.gif)
 
 In the end, the majority of my time in SketchUp has been used to virtually wander around my house-to-be. To look at the kitchen from different angles, to play with different appliance sizes, and to think about how we’ll live in the space. I've definitely become that person wandering around my friend's houses with a tape measure to better match reality how my 3D model feels. Oh is that island 12ft long? _Interesting_.
 
@@ -113,7 +113,13 @@ And yes, if you so choose there are many ways to import your SketchUp models int
 
 ## Collaboration
 
-The other thing that digital tools excel at is collaboration — at least if you're using the same tools. Which is the other thing that pulled me toward SketchUp — that was the tool that SSB uses for their design.
+Another huge benefit of iterative tools like software is the collaboration it brings possible. Which was pretty important. Because I am no architect, and I have never designed a house. So it was good to have Brandon from SSB take my models and make something a little more reasonable and buildable.
+
+![SSB's Model](https://assets.warpspire.com/images/money-pit/SSB Model.jpg)
+
+Because I'd taken the time to learn SketchUp, I could then take his models and iterate on them the same way he'd iterated on mine. And — honestly — this kind of feels like how designing a house _should_ work.
+
+The one-way street of iteration via design reviews feels very outdated now that I've worked this way. Because an architect may be an expert in how to design buildings — but you'll be living in this house, not the architect. You'll have a better mental model of how you expect to live in it.
 
 ----
 
@@ -124,31 +130,29 @@ At this point, the construction documents are done, the foundation has been pour
 
 So my interests have shifted from SketchUp toward more realistic renders to explore materials and lighting. And hoo-boy is there a deep end to fall down that road.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/DB79A93A-A595-45D3-BC3D-36679950E46D_2/pUvVsdDCx9uZjK5QVqoKLPCiaE7FxA1sPOjS7wwVS0Qz/Office%20in%20Daylight.png)
+![Office Render](https://assets.warpspire.com/images/money-pit/Office in Daylight.jpg)
 
 The particular deep end I’ve decided to settle on is [v•ray](https://www.chaos.com/). And for as infuriating as rendering can be, the results can sure be pleasing.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/664A1A85-FE91-49E2-AD6A-BAA6B02CFE32_2/7yDGwh7rtkNyajjXWuHWczjUxZdjSQrtbl8MPJQCaXsz/Noisy%20Option.png)
+![Kitchen Render](https://assets.warpspire.com/images/money-pit/Kitchen.jpg)
 
 With every render, I get a little bit better at understanding what kind of textures provide a result similar to my real-world samples, and just how much detail is needed to really pull off an accurate render.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/8B5AFDD0-5B7F-4108-9985-E0A4F5382513_2/iNrPoBcD2xCY0yA8Hs0w6zeEEgvqJqj9NuNBZmKs4j0z/Stove%20Closeup.png)
+![Stove Render](https://assets.warpspire.com/images/money-pit/Stove Closeup.jpg)
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/FC3BA268-E378-4B09-B399-E03B6F629E78_2/9oxV4SvIZX3xexa34WxzPKVmx5TlHcqnWxSLTM11e3kz/Kitchen%20Island.jpeg)
+![Kitchen Island Render](https://assets.warpspire.com/images/money-pit/Kitchen Island.jpg)
 
 And I think that pleasing nature is what has kept me busy. Because if I’m honest, at this point I don’t think the renders are helping me that much. I’ve learned through trial and error that rendering is a lot more of an art than a science.
 
-![image](https://res.craft.do/user/full/d709c083-8f15-389f-f1e1-5e1c05ed703a/doc/1262022E-7F1A-4B02-9A02-AE1C7061958A/88C91886-B0D3-4513-9D01-5F5AB9494145_2/Bp0IcmX4z0ZwrmyuvVsyBoczZ7ox0lMC3XzIkqUwoawz/Master%20Bath%20PIcture.png)
+![Master Bath Render](https://assets.warpspire.com/images/money-pit/Master Bath PIcture.jpg)
 
 ----
 
-All in all, this has been an incredibly fun project to work on. And it's even more exciting now that the building is starting to take shape in the physical world. Much of my professional career has revolved around building things in the digital world, and that was a lot of fun! But deep in my heart I've always been pulled towards building things in the real world. The accessibility of 3D modeling has really helped bridge the gap of speed of iteration (what I loved about working in software) and the impressiveness of physical infrastructure (what I loved about civil engineering).
+All in all, this has been an incredibly fun project to work on. And it's even more exciting now that the building is starting to take shape in the physical world. Much of my professional career has revolved around building things in the digital world, and that was a lot of fun! But deep in my heart I've always been pulled towards building things in the real world. The accessibility of 3D modeling has really helped bridge the gap of speed of iteration (what I loved about working in software) and the realness of physical infrastructure (what I loved about civil engineering).
 
 I've also enjoyed the process of getting here. Aside from 3D modeling, I've spent a lot of time trying to understand what makes a good home a good home. I've learned about a [form of architecture](https://smile.amazon.com/Patterns-Home-Essentials-Enduring-Design/dp/1561585335/ref=sr_1_2?keywords=patterns+of+home&qid=1638580357&sr=8-2) that deeply resonates with me, and just how far [building science](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjnlqLavez2AhUZIjQIHcxFB-8QFnoECAoQAQ&url=https%3A%2F%2Fbuildshownetwork.com%2F&usg=AOvVaw2cM1bJUuLAErx8LA0bzvGq) has come in the past few decades.
 
-For better and for worse, this home will be a product of my dreams, born out of my opinions of where our future is headed. It'll be a bit ridiculous, but in ways that might be confusing to most. I won't have a 10,000 sqft deck overlooking the lake, but I will have a geothermal heat pump heating the hot tub. In fact — the stuff I'm most excited about isn't how the house looks at all, but rather the way the house will live. How the snow sheds. How it'll deal with smoke season. How it'll resist grid failures. And why, for the first time in my life, my house will have straight walls.
-
-I hope to write more about that stuff.
+For better and for worse, this home will be a product of my dreams, born out of my opinions of where our future is headed. It'll be a bit ridiculous, but in ways that might be confusing to most. I won't have a 10,000 sqft deck overlooking the lake, but I will have a geothermal heat pump heating the hot tub. In fact — the stuff I'm most excited about isn't how the house looks at all, but rather the way the house will live. How the snow sheds. Why it'll resist ice dams. How it'll deal with smoke season. How it'll resist grid failures. And why, for the first time in my life, my house will have straight walls.
 
 ----
 
