--- a/_posts/2022-03-30--money-pit.md
+++ b/_posts/2022-03-30--money-pit.md
@@ -1,14 +1,14 @@
 ---
 layout: phasetwo/post
 title: My Very Own Money Pit
-summary: It's a house!
+summary: Over the past two years, I've been learning SketchUp and collaborating with some local builders to design a house of my dreams.
 ---
 
 *"So, are you gonna have a swimming pool?"*
 
 No, I am not going to build a swimming pool in South Lake Tahoe. 
 
-In fairness, the hole in the ground did look suspiciously swimming pool esque. This hole in the ground was for my basement. A hard won basement that required consultants and backhoes long before any building plans existed. A basement that I'm very excited about! It'll allow the house to sit slightly proud of the grade, rising above the snow in the winter, protecting the crawlspace from hibernating bears, and presenting a non-ignitable material to burning embers and grass in the summer. And the extra space will afford a root cellar, music room, and mechanical equipment inside the conditioned envelope — all while staying within TRPA’s coverage and height limits.
+In fairness, the hole in the ground did look suspiciously swimming pool esque. But this hole in the ground was for my basement. A hard won basement that required consultants and backhoes long before any building plans existed. A basement that I'm very excited about! It'll allow the house to sit slightly proud of the grade, rising above the snow in the winter, protecting the crawlspace from hibernating bears, and presenting a non-ignitable material to burning embers and grass in the summer. And the extra space will afford a root cellar, music room, and mechanical equipment inside the conditioned envelope — all while staying within TRPA’s coverage and height limits.
 
 ![Picture of my swimming hole basement](https://assets.warpspire.com/images/money-pit/Swimming Hole.jpg)
 
@@ -24,7 +24,7 @@ After a couple years of building department bureaucracy, a megafire burning thro
 
 ----
 
-**And you may ask yourself, well, how did I get here?**
+<blockquote class="pull"><p>And you may ask yourself<br /> well, how did I get here?</p></blockquote>
 
 ----
 
@@ -75,7 +75,7 @@ So, that's why I didn't hire an architect. **I just really enjoyed designing thi
 ## Iteration, iteration, iteration
 
 
-I’m a big fan of iteration when setting out to create something new. In a perfect universe, I’d build a house, live in it for a while, and re-build it every year for a decade or so. Every iteration of the house would improve upon its predecessor until all the kinks were ironed out, the light hit the walls *just so*, and every space was perfected for its use. But that's a fantasy left for science-fiction. In the real world, building a house is a one-shot deal, and that means lots of planning. Every wall, every window, every doorway needs to be carefully designed and engineered long before construction starts. That's doubly true in today's world of long lead times (the _supply chain_ and all that). Traditionally, architects have used sketches and drawings to communicate their ideas to their clients during this phase.
+I’m a big fan of iteration when setting out to create something new. In a perfect universe, I’d build a house, live in it for a while, and re-build it every year for a decade or so. Every iteration of the house would improve upon its predecessor until all the kinks were ironed out, the light hit the walls *just so*, and every space was perfected for its use. But that's a fantasy left for science-fiction. In the real world, building a house is a one-shot effort, and that means lots of planning. Every wall, every window, every doorway needs to be carefully designed and engineered long before construction starts. That's doubly true in today's world of long lead times (the _supply chain_ and all that). Traditionally, architects have used sketches and drawings to communicate their ideas to their clients during this phase.
 
 ![A sketch of Kriesel's Twin Palms](https://assets.warpspire.com/images/money-pit/Twin Palms.jpg)
 
@@ -83,7 +83,7 @@ These drawings kind of suck. They’re pretty artifacts to look at, but they don
 
 ![A physical architectual model](https://assets.warpspire.com/images/money-pit/Floodline Model.jpg)
 
-Unfortunately, we're not building a school for ants, and these models don't communicate interior spaces well at all. More importantly, drawings and models aren't really iterative. They take a long time to produce, and can't be easily modified. But this is where computers excel! Iterations are cheap, and easy modification is the rule. This is what drew me to 3D modeling — specifically [SketchUp](https://www.sketchup.com). At first, I was intimidated — I had never really done any 3D modeling. But I have to say, the world of 3D modeling has become extremely accessible in the past decade or so. It only took me a week or so to master the basics and start getting value out of my models.
+Unfortunately, we're not building a school for ants, and these models don't communicate interior spaces well at all. More importantly, drawings and models aren't really iterative. They take a long time to produce, and can't be easily modified. But this is where computers excel! Iterations are cheap, and easy modification is the rule. This is what drew me to 3D modeling — specifically [SketchUp](https://www.sketchup.com). I have to admit I was intimidated — I had never really done any 3D modeling. But the world of 3D modeling has become extremely accessible in the past decade or so. There are many free tools (SketchUp and Blender being most popular), and tons of free training videos available. It only took a few days of dedicated study time to master the basics and start getting value out of my models.
 
 ![SketchUp Model 1](https://assets.warpspire.com/images/money-pit/Model 1.jpg)
 
@@ -93,7 +93,7 @@ Most importantly, the process was very iterative — I could copy and paste ele
 
 I love this type of accurately-modeled iteration because it allows you to play with ideas and see tradeoffs in a holistic sense. It's like using real user data for your digital prototypes instead of nicely formatted cherry-picked sample data. What is the tradeoff of solar production, passive gain, and garden size given different building masses? How much smaller would my kitchen need to be if I were to position the driveway differently?
 
-This is the core of why I love to use iteration on problems with several interconnected variables. You can try to be boy-genius and juggle height restrictions, setbacks, coverage, sun paths, and trees in your head… or you can just try a dozen different ideas and build an intuitive model of the problem over time.
+This is the core of why I love to use iteration on problems with several interconnected variables. You can try to be boy-genius and juggle height restrictions, setbacks, coverage, sun paths, roof pitches, and trees in your head… or you can just try a dozen different ideas and build an intuitive model of the problem over time.
 
 Curious if a solution will work? Try it out.
 
@@ -119,7 +119,7 @@ Another huge benefit of iterative tools like software is the collaboration it br
 
 Because I'd taken the time to learn SketchUp, I could then take his models and iterate on them the same way he'd iterated on mine. And — honestly — this kind of feels like how designing a house _should_ work.
 
-The one-way street of iteration via design reviews feels very outdated now that I've worked this way. Because an architect may be an expert in how to design buildings — but you'll be living in this house, not the architect. You'll have a better mental model of how you expect to live in it.
+The one-way street of iteration via design reviews feels very outdated now that I've worked this way. An architect may be an expert in how to design buildings — but you'll be living in this house, not the architect. You'll be able to build a better mental model of how you expect to live in it.
 
 ----
 
@@ -128,11 +128,11 @@ The one-way street of iteration via design reviews feels very outdated now that 
 
 At this point, the construction documents are done, the foundation has been poured, the windows have been ordered, and the framers are assembling large piles of engineered lumber into a permanent structure. The floor plan won't be changing.
 
-So my interests have shifted from SketchUp toward more realistic renders to explore materials and lighting. And hoo-boy is there a deep end to fall down that road.
+So my interests have shifted from SketchUp toward more realistic renders to explore materials and lighting. And hoo-boy is there a deep end to fall down that rabbit hole.
 
 ![Office Render](https://assets.warpspire.com/images/money-pit/Office in Daylight.jpg)
 
-The particular deep end I’ve decided to settle on is [v•ray](https://www.chaos.com/). And for as infuriating as rendering can be, the results can sure be pleasing.
+The particular deep end I’ve decided to settle on is [v•ray](https://www.chaos.com/). And for as frustrating as rendering can be, the results can sure be pleasing.
 
 ![Kitchen Render](https://assets.warpspire.com/images/money-pit/Kitchen.jpg)
 
@@ -142,25 +142,33 @@ With every render, I get a little bit better at understanding what kind of textu
 
 ![Kitchen Island Render](https://assets.warpspire.com/images/money-pit/Kitchen Island.jpg)
 
-And I think that pleasing nature is what has kept me busy. Because if I’m honest, at this point I don’t think the renders are helping me that much. I’ve learned through trial and error that rendering is a lot more of an art than a science.
+And I think that pleasing nature is what has kept me busy. Because if I’m honest, at this point I don’t think the renders are helping me that much. I’ve learned through trial and error that rendering is a lot more of an art than a science — so in a lot of ways I'm making pretty pictures, not accurate views of what will be.
 
 ![Master Bath Render](https://assets.warpspire.com/images/money-pit/Master Bath PIcture.jpg)
 
 ----
 
-All in all, this has been an incredibly fun project to work on. And it's even more exciting now that the building is starting to take shape in the physical world. Much of my professional career has revolved around building things in the digital world, and that was a lot of fun! But deep in my heart I've always been pulled towards building things in the real world. The accessibility of 3D modeling has really helped bridge the gap of speed of iteration (what I loved about working in software) and the realness of physical infrastructure (what I loved about civil engineering).
+All in all, this has been an incredibly fun project to work on. And it's even more exciting now that the building is starting to take shape in the physical world. Even though I spent five years of college learning to design physical infrastructure, my professional career has revolved around building things in the digital world. And that was fun! But deep in my heart I've always been pulled towards building things in the real world — bridges, buildings, roads, and the like. The accessibility of 3D modeling has really helped bridge the gap of speed of iteration (what I loved about working in software) and the realness of physical infrastructure (what I loved about civil engineering).
 
 I've also enjoyed the process of getting here. Aside from 3D modeling, I've spent a lot of time trying to understand what makes a good home a good home. I've learned about a [form of architecture](https://smile.amazon.com/Patterns-Home-Essentials-Enduring-Design/dp/1561585335/ref=sr_1_2?keywords=patterns+of+home&qid=1638580357&sr=8-2) that deeply resonates with me, and just how far [building science](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjnlqLavez2AhUZIjQIHcxFB-8QFnoECAoQAQ&url=https%3A%2F%2Fbuildshownetwork.com%2F&usg=AOvVaw2cM1bJUuLAErx8LA0bzvGq) has come in the past few decades.
 
-For better and for worse, this home will be a product of my dreams, born out of my opinions of where our future is headed. It'll be a bit ridiculous, but in ways that might be confusing to most. I won't have a 10,000 sqft deck overlooking the lake, but I will have a geothermal heat pump heating the hot tub. In fact — the stuff I'm most excited about isn't how the house looks at all, but rather the way the house will live. How the snow sheds. Why it'll resist ice dams. How it'll deal with smoke season. How it'll resist grid failures. And why, for the first time in my life, my house will have straight walls.
+For better and for worse, this home will be a product of my dreams, born out of my opinions of where our future is headed. It'll be a bit ridiculous, but in ways that might be confusing to most. I won't have a 10,000 sqft deck overlooking the lake, but I will have a geothermal heat pump heating the hot tub and windows with excellent air sealing. In fact — the stuff I'm most excited about isn't how the house looks at all, but rather the way the house will live. How the snow sheds. Why it'll resist ice dams. How it'll deal with smoke season. How it'll resist grid failures. And why, for the first time in my life, my house will have straight walls.
+
+![Kitchen View](https://assets.warpspire.com/images/money-pit/Construction 3.jpg)
 
 ----
 
 ## You can be a~~n architect~~ house designer!
 
 
-If you’re building a commercial building or multi-family residence, you need an architect — someone with a state issued license that allows them to call themselves an architect. Anyone without that license is just a designer. However, I suspect a lot of people don't realize that anyone can be a designer. In every state in America it's entirely possible to design your own home without any kind of licenses or certifications. It may go without saying, but your home *still has to be engineered and meet all building codes and regulations*.
+If you’re building a commercial building or multi-family residence, you need an architect — someone with a state issued license that allows them to call themselves an architect. Anyone without that license is just a designer. However, I suspect a lot of people don't realize that anyone can be a designer. In every state in America it's entirely possible to design your own home without any kind of licenses or certifications. It may go without saying, but your home *still has to be engineered and meet all building codes and regulations*. And of course — you need to be able to afford it. Half an architect's job is budgeting.
 
 And well-built modern homes are complicated. Long past are the days of craftsman homes ordered at Sears and delivered as a pile of lumber on a truck. If you're building a house today, you'll want a small army of consultants to help you in your quest.
 
-So while it’s fun to say I designed this house, in reality there is a huge team of people who took my ideas and made them real. The geotechnical consultant to prove the basement, the structural engineer to design the structural members, the MEP (Mechanical, Electrical, Plumbing) consultant to design the fresh air & HVAC systems, the solar firm to design the solar & storage systems, the cabinetry firm to design the kitchen, the low voltage consultant for ethernet drops, the drafting firm to create the construction documents, and of course — Brandon at Sierra Sustainable who wrangled all of these people and leveraged his extensive experience in building homes to polish my ideas from a concept into a comfortable, buildable, efficient, house that meets code.
+So while it’s fun to say I designed this house, in reality there is a huge team of people who took my ideas and made them real. The geotechnical consultant to prove the basement, the structural engineer to design the structural members, the MEP (Mechanical, Electrical, Plumbing) consultant to design the fresh air & HVAC systems, the solar firm to design the solar & storage systems, the cabinetry firm to design the kitchen, the low voltage consultant for ethernet drops, the drafting firm to create the construction documents, and of course — Brandon at Sierra Sustainable who wrangled all of these people and leveraged his extensive experience in building homes to transform my ideas from a concept into a comfortable, buildable, efficient house that meets code.
+
+----
+
+This house has been the top of my mind for a long time now, and I'm hoping to write more about how I've been thinking about it. I've long been frustrated with the shoddy houses built by recent generations — houses that are already falling apart and fail to inspire. But more importantly — _our climate is changing_ — and our shelter is in desperate need of catching up. Floods, fires, thick smoke, extreme heat, ice storms, downpours, utility outages, and more — these are all going to be a regular part of our modern lives. We can't rely on "typical" conditions going forward.
+
+Building technology (both old and new) has answers to many of these challenges, and it doesn't necessarily mean living in an underground bunker. Our homes can be resilient _and_ comfortable if we so choose.
