Just a much cleaner home page

--- a/_posts/2022-03-30--money-pit.md
+++ b/_posts/2022-03-30--money-pit.md
@@ -2,6 +2,7 @@
 layout: phasetwo/post
 title: My Very Own Money Pit
 summary: Over the past two years, I've been learning SketchUp and collaborating with some local builders to design a house of my dreams.
+short: On learning how to design a house with SketchUp.
 ---
 
 *"So, are you gonna have a swimming pool?"*
